update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ Server/PracticalAssignment/PracticalAssignment\.Database/obj/
 Server/PracticalAssignment/PracticalAssignment\.WebAPI/bin/
 Server/PracticalAssignment/PracticalAssignment\.WebAPI/obj/
 
+
+Server/PracticalAssignment/PracticalAssignment\.DTO/obj/
+
+Server/PracticalAssignment/PracticalAssignment\.Services/bin/
+
+Server/PracticalAssignment/PracticalAssignment\.Services/obj/
