api for Library

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ Server/PracticalAssignment/PracticalAssignment\.DTO/obj/
 Server/PracticalAssignment/PracticalAssignment\.Services/bin/
 
 Server/PracticalAssignment/PracticalAssignment\.Services/obj/
+
+Server/PracticalAssignment/\.vs/
+
+Server/PracticalAssignment/PracticalAssignment\.DTO/bin/
+
+Server/PracticalAssignment/PracticalAssignment\.Infrastructure/bin/
+
+Server/PracticalAssignment/PracticalAssignment\.Infrastructure/obj/
