--- a/Server/PracticalAssignment/PracticalAssignment.WebAPI/PracticalAssignment.WebAPI.csproj
+++ b/Server/PracticalAssignment/PracticalAssignment.WebAPI/PracticalAssignment.WebAPI.csproj
@@ -10,11 +10,15 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Assignment.Database.Entities\PracticalAssignment.Database.Entities.csproj" />
     <ProjectReference Include="..\PracticalAssignment.Database\PracticalAssignment.Database.csproj" />
+    <ProjectReference Include="..\PracticalAssignment.Infrastructure\PracticalAssignment.Infrastructure.csproj" />
+    <ProjectReference Include="..\PracticalAssignment.Services\PracticalAssignment.Services.csproj" />
   </ItemGroup>
 
 </Project>
