update code: 1.  /api/Document/{libraryId} -> /api/Document/{documentId} 2. naming convention javascript

--- a/Server/PracticalAssignment/PracticalAssignment.WebAPI/PracticalAssignment.WebAPI.csproj
+++ b/Server/PracticalAssignment/PracticalAssignment.WebAPI/PracticalAssignment.WebAPI.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Java Core\" />
+    <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
 </Project>
